# kmeans-simd

./: .gitignore  CMakeLists.txt  README.md  baseline.c  benchmark.c  internal.c  internal.h  kmeans.c  kmeans.h  simd_operation.h  test.c  utils.c  utils.h
